# supernear

./: .gitignore  LICENSE.txt
frontend/: .env  .eslintrc.json  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
frontend/public/: icons.min.js  tokens.min.json
frontend/src/: config.ts  types.ts
frontend/src/app/: layout.module.scss  layout.tsx  page.tsx  providers.tsx
frontend/src/app/chat/: page.module.scss  page.tsx
frontend/src/app/plans/: page.module.scss  page.tsx
frontend/src/hooks/: createTransactionManager.tsx  useAuth.tsx  useCrossState.ts  useMessageParameter.ts  useMessages.ts  useWalletSelector.tsx  useWalletSelector.tsx.old
frontend/src/sparks/: Spark.tsx  utils.ts
frontend/src/styles/: chat-ui.overrides.scss  global.scss  index.scss  utils.scss  variables.scss
frontend/src/utils/: auth.ts  get_account.ts  get_transaction.ts  log.ts  near_view.ts  spark_tx_handlers.ts  tokens.ts
premium-contract/: Cargo.toml  README.md  deploy.sh  deploy_args.json  dev_build.sh  dev_call.sh  dev_deploy.sh  dev_init.sh  dev_migrate.sh
premium-contract/contract/src/: lib.rs  migration.rs  subscription.rs  utils.rs
workers/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  wrangler.example.toml
workers/data/: intents.1.json  intents.2.json  intents.json
workers/src/: constants.ts  index.ts  plans.ts
workers/src/auth/: index.ts  jwt-middleware.ts  nonce.ts  signature.ts  signin.ts  signout.ts  types.ts  utils.ts
workers/src/superai/: helpers.ts  index.ts  intent_classifier.ts  save.md  super.ts  types.ts
(+26 files in other folders)
