[package]
name = "contract"
version = "0.0.1"
authors = ["sekaiking"]
edition = "2021"
publish = false

[lib]
path = "contract/src/lib.rs"
crate-type = ["cdylib", "rlib"]


[dependencies]
near-sdk = { version = "=5.5.0", features = ["legacy"] }
uint = { version = "=0.10.0", default-features = false }

[dev-dependencies]

[[example]]
name = "main"
path = "contract/tests/workspaces/main.rs"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []
